# arabterm

./: .gitignore  3rdpartylicenses.txt  MANIFEST.in  Makefile  README.md  categories.json  example.env  index.html  main.b181bbf3d948b311.js  polyfills.4a1e51706d719e32.js  pyproject.toml  runtime.5b7f5655fc699fbd.js  styles.1f8f9e50eb6c4145.css
arabterm/: mariadb_models.py  sqlite_models.py
assets/: biology.json  chemistry.json  civil_engineering.json  climate_environment.json  electronic_warfare.json  geography_history.json  geology.json  information_tech.json  law.json  masonry_carpentry.json  nutrition_technologies.json  printing_electricity.json  remote_sensing.json  renewable_energy.json  sociology_anthropology.json  transport_infrastructure.json  water_engineering.json
data/: arts_recreation_sports.csv  automotive_engineering.csv  biology.csv  chemistry.csv  civil_engineering.csv  climate_environment.csv  commerce_accounting.csv  economics.csv  education.csv  educational_techniques.csv  electrical_engineering.csv  electronic_warfare.csv  genetics.csv  geography_history.csv  geology.csv  gross_anatomy.csv  hygienics_human_body.csv  information_communication.csv  information_communication_tech.csv  information_tech.csv  language_literature.csv  law.csv  masonry_carpentry.csv  mathematics_astronomy.csv  meteorology.csv  nutrition_technologies.csv  oceanology.csv  petroleum.csv  pharmacy.csv  philosophy_psychology.csv  physics.csv  printing_electricity.csv  remote_sensing.csv  renewable_energy.csv  scs_data_sorted.csv  seismology.csv  sociology_anthropology.csv  (+4 more)
(+143 files in other folders)
