[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arabterm"
version = "2.0.1"
description = "A collection of Arabic terminology"
authors = [
    { name = "forzagreen" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymysql",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pip",
    "ruff",
]

[project.urls]
Repository = "https://github.com/forzagreen/myrepo"

[tool.setuptools]
packages = ["arabterm"]
